--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,9 +4,68 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+}
+
 #root {
   height: 100%;
-  background: #e5e5e5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: sans-serif;
+  background-color: hsl(0, 0%, 50%);
+  color: hsl(0, 0%, 7%);
+}
+
+#gameInfo {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background: hsl(0, 0%, 63%);
+}
+
+#gameInfo div {
   padding: 1rem;
+  flex: 1;
+}
+
+#scoreCurrent {
+}
+
+#scoreHigh {
+  display: flex;
+  justify-content: flex-end;
+}
+
+#gameWon {
+  display: flex;
+  justify-content: center;
+}
+
+#cardsContainer {
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1440px;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 7px;
+  background-color: hsl(0, 0%, 74%);
+  width: 350px;
+  margin: 10px;
+  padding: 1rem;
+  cursor: pointer;
+  user-select: none;
+  transition: background 20ms;
+  font-size: 1.26rem;
 }
