--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,31 +10,32 @@ html {
 
 body {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: hsl(0, 0%, 85%);
 }
 
 #root {
+  margin-inline: 1rem;
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   font-family: sans-serif;
-  background-color: hsl(0, 0%, 50%);
+  background-color: hsl(0, 0%, 85%);
   color: hsl(0, 0%, 7%);
 }
 
 #gameInfo {
   width: 100%;
+  border-radius: 0 0 7px 7px;
   display: flex;
   justify-content: space-between;
-  background: hsl(0, 0%, 63%);
+  background: hsl(0, 0%, 94%);
 }
 
 #gameInfo div {
   padding: 1rem;
   flex: 1;
-}
-
-#scoreCurrent {
 }
 
 #scoreHigh {
@@ -48,11 +49,12 @@ body {
 }
 
 #cardsContainer {
-  flex: 1;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  max-width: 1440px;
+  align-items: center;
+  max-width: 1300px;
+  flex: 1;
 }
 
 .card {
@@ -60,12 +62,18 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 7px;
-  background-color: hsl(0, 0%, 74%);
-  width: 350px;
+  background-color: hsl(0, 0%, 94%);
+  width: 300px;
+  height: 200px;
   margin: 10px;
-  padding: 1rem;
+  padding: 7px;
   cursor: pointer;
   user-select: none;
-  transition: background 20ms;
-  font-size: 1.26rem;
+}
+
+.card img {
+  border-radius: 7px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
